--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+/* fonte roboto e Overpass*/
+
+*{
+    margin: 0 ;
+}
+
+:root{
+    --fontePrincipal: "Roboto";
+    --fonteSecundaria: "Overpass";
+}
+
 #mensagem{
     width: 100%;
     height: 100vh;
@@ -5,5 +18,69 @@
     align-items: center;
     justify-content: center;
     font-size: 2rem;
-    color: #f11a1a;
+    color: #000000;
+    font-family: var(--fontePrincipal);
+}
+
+@media screen and (min-width:370px)  and (max-width: 410px){
+    #mensagem{
+        display: none;
+    }
+
+    #jukebox{
+        width: 100%;
+        height: 200vh;
+        background-color: black;
+    }
+
+    #inicioJukebox{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        border: 1px solid red;
+    }
+
+    #iconesInicio{
+        width: 50%;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #ffffff; 
+        border: 1px solid red;
+    }
+    .icon{
+        border: 1px solid red;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #logoInicio{
+        width: 50%;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        font-size: 1.5rem;
+        font-family: var(--fontePrincipal);
+        color: #ffffff;
+        border: 1px solid red;
+    }
+
+    #circuloVermelho{
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        background-color: #ff0000;
+        border: 1px solid red;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+
+
 }
