--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 
     #inicioJukebox{
         width: 100%;
-        height: 100px;
+        height: 80px;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -58,6 +58,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 1.2rem;
     }
 
     #logoInicio{
@@ -80,7 +81,36 @@
         margin-right: 10px;
         margin-left: 10px;
     }
+    /* FIM INICIOJUKEBOX */
 
+    #opcoesDeAudio{
+        border: 1px solid red;
+        width: 100%;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        overflow-x:auto;
+    }
+
+    .opcao{
+        height: 35px;
+        min-width: 135px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.1rem;
+        font-family: var(--fontePrincipal);
+        color: #ffffff;
+        border:1px solid #ff0000;
+        background-color: #777676b4;
+        padding: 5px;
+        margin-left: 10px;
+        border-radius: 15px;
+    }
+
+    .opcoesDeAudio::-webkit-scrollbar{
+        width: 0px;
+    }
 
 
 }
