--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     font-family: var(--fontePrincipal);
 }
 
+#jukebox{
+    display: none;
+}
+
 @media screen and (min-width:300px)  and (max-width: 420px){
     #mensagem{
         display: none;
@@ -86,10 +90,14 @@
     #opcoesDeAudio{
         border: 1px solid red;
         width: 100%;
-        height: 70px;
+        height: 80px;
         display: flex;
         align-items: center;
         overflow-x:auto;
+    }
+
+    #opcoesDeAudio::-webkit-scrollbar{
+        width: 0px;
     }
 
     .opcao{
@@ -108,9 +116,93 @@
         border-radius: 15px;
     }
 
-    .opcoesDeAudio::-webkit-scrollbar{
-        width: 0px;
+    /*  */
+
+    #usuarioFoto{
+        width: 100%;
+        height: 70px;
+        border: 1px solid red;
+        display: flex;
     }
+
+    #foto{
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        margin-left: 15px;
+        margin-top: 10px;
+        border: 1px solid red;
+    }
+    #nomeJukebox{
+        color: #ffffff;
+        font-family: var(--fonteSecundaria);
+        margin-left: 15px;
+        margin-top: 10px;
+    }
+    #nomeJukebox p{
+        color: #777676b4;
+        font-size: large;
+    }
+    #nomeJukebox h3{
+        font-size: x-large;
+    }
+    /*  */
+
+    #quadroMusicas{
+        width: 100%;
+        height: 370px;
+        border: 1px solid red;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        
+    }
+
+    .musicaImg{
+        width: 110px;
+        height: 110px;
+        border-radius: 15px;
+        border: 1px solid red;
+    }
+    /*  */
+
+    #lancamentoSeta{
+        width: 100%;
+        height: 50px;
+        color: #ffffff;
+        border:1px solid red;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    #lancamentoSeta p, span{
+        margin-left: 15px;
+        margin-right: 15px;
+        font-family: var(--fonteSecundaria);
+        font-size: larger;
+    }
+    /*  */
+
+    #novosProjetos{
+        width: 100%;
+        height: 160px;
+        border: 1px solid yellow;
+        display: flex;
+        overflow-x: auto;
+    }
+    #novosProjetos::-webkit-scrollbar{
+        width: 0;
+    }
+    .capaProjeto{
+        min-width: 120px;
+        height: 130px;
+        border: 1px solid red;
+        margin-left: 15px;
+        margin-top: 10px;
+        border-radius: 15px;
+    }
+    /*  */
 
 
 }
